# csp-student-life-scheduling

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
examples/: schedule.json
notebooks/: CSP_for_Student_Life_Scheduling.ipynb
src/csp_student_life/: __init__.py  cli.py  data.py  domain.py  heuristics.py  schedule.py
tests/: test_schedule_json.py
