[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "csp-student-life-scheduling"
version = "0.1.0"
description = "CSP-inspired weekly schedule builder for student life, exported as JSON."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Gabriele Tiboni"}]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "ruff>=0.5.0"
]

[project.scripts]
csp-student-life = "csp_student_life.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = ["notebooks/**"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
